--- a/part_three_b.html
+++ b/part_three_b.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"></meta>
     <title>Part One</title>
-    </head>
-    <body>
+   </head>
+  
+   <body>
   <div class = "navbar">
   <img alt = "company icon" src = "icon.png"></img>
   <div class = "menu">
@@ -12,6 +13,7 @@
               </div></div>
     <div class = "content"><divv class = "article">
       <h3> Title </h3>
+      </div>
 <p> Content </p>
   <h6> Author </h6></div>
 <div class = "article">
@@ -19,7 +21,9 @@
         <p> Content </p>
     <h6> Author </h6>
 <div class = "article">
-<h3> Title </h3><p> Content /p><h6> Author </h6>
+<h3> Title </h3>
+<p> Content /p>
+<h6> Author </h6>
       </div></div>
   </body>
 <html>
